# demo-projects

./: .gitignore  README.md
MedidorInbound/app/: README.md  build.gradle.kts
apache-kafka/: README.md
apache-kafka/consumer/: pom.xml
apache-kafka/producer/: pom.xml
app-android-kotlin-jetpack-compose/MedidorInbound/: settings.gradle.kts
benchmark-executor-k6-grafana/: README.md  docker-compose.yml  prometheus.yml  prometheus_metrics_results.json
benchmark-java-node-php-python/: COMMANDS.md  EXAMPLES.md  README.md  docker-compose.yml  test_limit.php
benchmark-java-node-php-python/cpp-drogon/gateway/: CMakeLists.txt  Dockerfile  config.json
benchmark-java-node-php-python/cpp-drogon/gateway/include/controllers/: GatewayController.h
benchmark-java-node-php-python/cpp-drogon/gateway/src/: main.cpp
benchmark-java-node-php-python/cpp-drogon/gateway/src/controllers/: GatewayController.cpp
benchmark-java-node-php-python/cpp-drogon/monolith/: CMakeLists.txt  Dockerfile  config.json
benchmark-java-node-php-python/cpp-drogon/monolith/include/config/: DatabaseConfig.h
benchmark-java-node-php-python/cpp-drogon/monolith/include/controllers/: BonusController.h
benchmark-java-node-php-python/cpp-drogon/monolith/include/dto/: BonusDTO.h
benchmark-java-node-php-python/cpp-drogon/monolith/include/models/: Bonus.h  Client.h
benchmark-java-node-php-python/cpp-drogon/monolith/include/repositories/: BonusRepository.h  ClientRepository.h
benchmark-java-node-php-python/cpp-drogon/monolith/include/services/: BonusService.h
benchmark-java-node-php-python/cpp-drogon/monolith/src/: main.cpp
benchmark-java-node-php-python/cpp-drogon/monolith/src/config/: DatabaseConfig.cpp
benchmark-java-node-php-python/cpp-drogon/monolith/src/controllers/: BonusController.cpp
benchmark-java-node-php-python/cpp-drogon/monolith/src/models/: Bonus.cpp  Client.cpp
benchmark-java-node-php-python/cpp-drogon/monolith/src/repositories/: BonusRepository.cpp  ClientRepository.cpp
benchmark-java-node-php-python/cpp-drogon/monolith/src/services/: BonusService.cpp
benchmark-java-node-php-python/pgbouncer/: pgbouncer.ini  userlist.txt
benchmark-java-node-php-python/php-laravel-fpm/: docker-compose.yml  error.html
benchmark-java-node-php-python/rust/monolith/: Cargo.toml
benchmark-java-node-php-python/rust/monolith/src/: handlers.rs  repository.rs
benchmark-java-node-php-python/rust/monolith/src/domain/: mod.rs
benchmark-stacks-swarm/: README.md  analise_benchmark.md
benchmark-stacks/stacks/apps/rust/gateway/: Cargo.toml
benchmark-stacks/stacks/apps/rust/gateway/src/: handlers.rs  main.rs
database-migration-tools/: README.md  docker-compose.yml
docker-swarm-orchestrator/: README.md
gattling/: app-virtual-threads-escreve-arquivo.jmx  app-virtual-threads.jmx
graalvm/: HELP.md  README.md  native-image.properties  pom.xml
graphql/: README.md  pom.xml
hateoas/: pom.xml
hello-world/: pom.xml
kong-gateway/: README.md
microfrontend/: README.md
mysql-replication/: README.md
node-https/: README.md  package-lock.json  package.json  server.js
nomad-orchestrator/: README.md
nomad-swarm-orchestrator/: COMPARISON.md  README.md
openapi/: README.md  dbh2test4.mv.db  pom.xml
profiler-jfr-jmc/: README.MD  testefl.jfr
profiler-stackify-prefix/: README.MD
service-discovery-consul/: README.md
spring-boot-admin/: README.md
spring-circuit-breaker/: README.md
spring-data-mongo/: pom.xml
spring-grpc/: README.md
spring-keycloak/: README.md  pom.xml
terraform/: README  README.md  main.tf  main.tfplan  variables.tf
virtual-threads/: pom.xml
(+1404 files in other folders)
